# E-commerce

./: .gitignore  DockerFile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2290949b31b7_remove_email_unique.py  dda18f29ab71_added_user_table.py
e_commerce/: database.py
models/: user.py
restaurant_crm/: .env  .env.template  config.py  database.py  db.env
routers/: auth.py  user.py
schemas/: auth.py  user.py
utils/: auth.py
